--- a/hostingPage/index.html
+++ b/hostingPage/index.html
@@ -1,39 +1,37 @@
 <html>
 <head>
-	<style>
-		body{
-			height:2000px;
-		}
-	</style>
 	<title>domain_a</title></head>
-<script>
-	var variable_a = "a";
-</script>
 <body>
 
-	<button>I forget my client ID</button>
+	<button id="button">I forget my client ID</button>
 	<!--<iframe id="hpel" height="100" frameborder="0" width="100%" scrolling="0" title="" src="http://forgotclientid.pinnacle.com/forgotID.html" style="height: 194px;"></iframe>-->
 </body>
 
 
-<!--<script id="b_js" src="http://domain_b.com/domain_b.js"></script>-->
+<script id="b_js" src="http://forgotclientid.pinnacle.com/forgotClientID.js"></script>
 <script>
-	var a = document.getElementById("div");
-	var b = {key:"value"};
-	var c = function(){
-		console.log(123);
-	}
-	function d (){
-		console.log(123);
-	}
+	// var a = document.getElementById("div");
+	// var b = {key:"value"};
+	// var c = function(){
+	// 	console.log(123);
+	// }
+	// function d (){
+	// 	console.log(123);
+	// }
 
-	window.onmessage = function(e){
-	 	e = e || event;
-	 	console.log(e.data)
-	}
+	// window.onmessage = function(e){
+	//  	e = e || event;
+	//  	console.log(e.data)
+	// }
+
+
 	// document.getElementById('hpel').onload = function(){
 	// 	document.getElementById('hpel').contentWindow.postMessage(b,"http://domain_b.com");
 	// }
+
+	document.getElementById('button').onclick = function(){
+		forgotClientIdPopup();
+	}
 
 </script>
 </html>
