--- a/hostingPage/index.html
+++ b/hostingPage/index.html
@@ -3,22 +3,14 @@
 	<title>domain_a</title></head>
 <body>
 
-	<button id="button">I forget my client ID</button>
+	<a href="#clientId">I forget my client ID</a>
 	<!--<iframe id="hpel" height="100" frameborder="0" width="100%" scrolling="0" title="" src="http://forgotclientid.pinnacle.com/forgotID.html" style="height: 194px;"></iframe>-->
 </body>
 
 
-<script id="b_js" src="http://forgotclientid.pinnacle.com/forgotClientID.js"></script>
+<!--<script id="b_js" src="http://forgotclientid.pinnacle.com/forgotClientID.js"></script>-->
+<script src="http://forgotclientid-dev.pinnaclesports.com/en/loader?ref=fadfasfa&hashtag=clientId&css=http%3A%2F%2Fhostingpage.com%2Foveridden-client-id-style.css"></script>
 <script>
-	// var a = document.getElementById("div");
-	// var b = {key:"value"};
-	// var c = function(){
-	// 	console.log(123);
-	// }
-	// function d (){
-	// 	console.log(123);
-	// }
-
 	// window.onmessage = function(e){
 	//  	e = e || event;
 	//  	console.log(e.data)
@@ -28,10 +20,5 @@
 	// document.getElementById('hpel').onload = function(){
 	// 	document.getElementById('hpel').contentWindow.postMessage(b,"http://domain_b.com");
 	// }
-
-	document.getElementById('button').onclick = function(){
-		forgotClientIdPopup();
-	}
-
 </script>
 </html>
