--- a/forgotID/forgotID.html
+++ b/forgotID/forgotID.html
@@ -23,7 +23,7 @@
                         <label for="">Email address</label>
                         <input type="text" class="form-control validation">
                     </div>
-                    <button type="button" class="btn btn-info btn-lg btn-block ">Continue</button>
+                    <a tabindex="0" class="btn btn-info btn-lg btn-block" role="button" data-toggle="popover" data-container="body" data-trigger="focus" data-content="Please enter a valid email address.">Continue</a>
                     <a href="">I don't know my email address.</a>
                 </div>
                 <div class="modal-footer">
@@ -43,5 +43,9 @@
     var popup = function(){
         $('#forgotClientIdPopup').modal();
     }
+
+    $(function () {
+      $('[data-toggle="popover"]').popover();
+    })
 </script>
 </html>
