--- a/forgotID/forgotIDMobile.html
+++ b/forgotID/forgotIDMobile.html
@@ -24,8 +24,8 @@
                         <label for="">Email address</label>
                         <input type="text" class="form-control validation">
                     </div>
-                    <button type="button" class="btn btn-info btn-lg btn-block ">Continue</button>
-                    <a href="">I don't know my email address.</a>
+                    <a tabindex="0" id="btn" class="btn btn-info btn-lg btn-block" role="button" data-toggle="popover" data-container=".form-group" data-trigger="focus" data-placement="bottom" data-content="Please enter a valid email address" onclick="btnclick()">Continue</a>
+                    <a href="">I don't know my email address</a>
                 </div>
                 <div class="modal-footer">
                     For further assistance, please contact
@@ -44,5 +44,9 @@
     var popup = function(){
         $('#forgotClientIdPopup').modal();
     }
+
+    $(function () {
+      $('[data-toggle="popover"]').popover();
+    })
 </script>
 </html>
