--- a/forgotID/checkEmail.html
+++ b/forgotID/checkEmail.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Desktop - check your email</title>
     <link rel="stylesheet" href="stylesheets/bootstrap_v3.3.6.css">
     <link rel="stylesheet" href="stylesheets/forgotClientId.css">
-    <link rel="stylesheet" href="stylesheets/checkEmail.css">
 </head>
 
 <body>
@@ -16,7 +15,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <span class="glyphicon glyphicon-ok check-ok"  aria-hidden="true"></span>
+                    <i class="tick"></i>
                     <h4 class="modal-title">Check your email</h4>
                 </div>
                 <div class="modal-body">
