--- a/forgotID/forgotEmail.html
+++ b/forgotID/forgotEmail.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Desktop - forgot email address</title>
     <link rel="stylesheet" href="stylesheets/bootstrap_v3.3.6.css">
-    <link rel="stylesheet" href="stylesheets/forgotClientId.css">
     <link rel="stylesheet" href="stylesheets/forgotEmail.css">
 </head>
 
