--- a/forgotID/forgotID.html
+++ b/forgotID/forgotID.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Desktop - forgot ID</title>
     <link rel="stylesheet" href="stylesheets/bootstrap_v3.3.6.css">
     <link rel="stylesheet" href="stylesheets/forgotClientId.css">
 </head>
